<resources>
    <string name="app_name">Fun With Flags</string>
    <string name="string_app_name">Fun With Flags!</string>
    <string name="welcome_string">Welcome</string>
    <string name="your_name_string">Please enter your name.</string>
    <string name="name_string">eg. John</string>
    <string name="start_string">Start</string>
    <string name="flag_question">What country does this flag belong to?</string>
    <string name="content_desc_img">image</string>
    <string name="submit">SUBMIT</string>
    <string name="finish">FINISH</string>
    <string name="submit_caps">SUBMIT</string>
    <string name="next_question">GO TO NEXT QUESTION</string>
    <string name="result">Result</string>
    <string name="image">image</string>
    <string name="congrats">Hey, Congratulations!</string>
</resources>