<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/quizQuestionsLayout"
    tools:context=".QuizQuestionsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvQuestion"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textColor="@color/greyText"
            android:textSize="22sp"
            tools:text="@string/flag_question"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivImage"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/content_desc_img"
            tools:src="@drawable/ic_flag_of_germany"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llProgressDetails"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            
            <ProgressBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_weight="1"
                android:indeterminate="false"
                android:max="10"
                android:minHeight="50dp"
                android:progress="0"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvProgress"
                android:gravity="center"
                android:padding="15dp"
                android:textColorHint="@color/hintText"
                android:textSize="14sp"
                tools:text="0/10"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvOptionOne"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/hintText"
            android:textSize="18sp"
            tools:text="Apple"/>

        <TextView
            android:id="@+id/tvOptionTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/hintText"
            android:textSize="18sp"
            tools:text="Google" />

        <TextView
            android:id="@+id/tvOptionThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/hintText"
            android:textSize="18sp"
            tools:text="Samsung" />

        <TextView
            android:id="@+id/tvOptionFour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/hintText"
            android:textSize="18sp"
            tools:text="One Plus" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
        
    </LinearLayout>

</ScrollView>